push to heroku, fixed pagination spacing problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,6 @@ body {
 .pagination {
   background: white;
   cursor: default;
-  height: 22px;
   a, span, em {
     padding: .2em .5em;
     padding-bottom: 2px;
